compiler/testData/cli/jvm/suspensionPointInMonitor.out
compiler/testData/cli/jvm/suspensionPointInMonitor.kt:26:13: error: the 'suspensionPoint' suspension point is inside a synchronized block
            suspensionPoint()
            ^
compiler/testData/cli/jvm/suspensionPointInMonitor.kt:60:17: error: the 'suspensionPoint' suspension point is inside a synchronized block
                suspensionPoint()
                ^
COMPILATION_ERROR
